# Aegis

./: .gitignore  PROJECT_PLAN.md  README.md
.github/workflows/: keep-warm.yml
.kombai/canvas/: aegis_revamp.canvas
command-centre/: README.md
command-centre/backend/: pyproject.toml
command-centre/backend/src/aegis_command/: __init__.py  api.py  case_officer.py  dashboard_summaries.py  intel.py  multilingual.py  response.py  store.py
command-centre/backend/tests/: test_intel.py
command-centre/frontend/: .env.example  README.md  index.html  package-lock.json  package.json
command-centre/frontend-leaflet/: README.md  package-lock.json  package.json
command-centre/frontend-leaflet/lib/: api.ts
command-centre/frontend/app/: globals.css  icon.tsx  layout.tsx  page.tsx
command-centre/frontend/app/components/: CrimeMap.tsx
command-centre/frontend/components/: AlertChips.tsx  AlertsDrawer.tsx  AnalyticsDrawer.tsx  BottomDock.tsx  CaseFileModal.tsx  CitizenShieldPanel.tsx  Clock.tsx  CrimeMap.tsx  DisruptPanel.tsx  Drawer.tsx  FraudConsole.tsx  FraudRingsDrawer.tsx  FusionChatBot.tsx  FusionPanel.tsx  IconRail.tsx  Icons.tsx  InfoPanel.tsx  LeftPanel.tsx  ModelCardPanel.tsx  ModulesDrawer.tsx  RecenterFX.tsx  ResearchPanel.tsx  RingViewer.tsx  Skeletons.tsx  SupplyTrailPanel.tsx  ToastContainer.tsx  TopNav.tsx  VolumePanel.tsx  WarningPanel.tsx  types.ts
command-centre/frontend/lib/: api.ts  format.ts  usePolling.ts
command-centre/fusion/: README.md  pyproject.toml
command-centre/fusion/output/: fusion_output.json  llm_eval_set.json  self_improve_report.json
command-centre/fusion/src/aegis_fusion/: __init__.py  correlator.py  fuse.py  narrator.py  self_improve.py  self_improve_eval.py
command-centre/fusion/tests/: test_fusion.py
command-centre/gateway/: README.md  package-lock.json  package.json
command-centre/gateway/src/: server.js
command-centre/geospatial/: pyproject.toml
command-centre/geospatial/src/aegis_geospatial/: __init__.py  hotspots.py
command-centre/geospatial/tests/: test_hotspots.py
command-centre/supply_trail/data/: corridors.json  fir_corpus.json
command-centre/supply_trail/src/aegis_supply_trail/: __init__.py  engine.py  narrate.py  network.py  routes.py
command-centre/supply_trail/tests/: test_engine.py  test_routes.py
contracts/: README.md  counterfeit.schema.json  fraud_graph.schema.json  fusion_output.schema.json  response_action.schema.json  scam_detection.schema.json  supply_trail.schema.json
contracts/samples/: counterfeit.sample.json  fraud_graph.sample.json  scam_detection.sample.json
counterfeit-vision/: README.md  download_data.py  pyproject.toml
counterfeit-vision/models/: counterfeit_cnn.meta.json
counterfeit-vision/src/aegis_counterfeit/: analyze.py  api.py  cli.py  config.py  data.py  model.py  prescreen.py  serials.py
counterfeit-vision/src/aegis_counterfeit/ui/: index.html
counterfeit-vision/tests/: test_analyze_contract.py  test_features.py  test_prescreen.py  test_serials.py
docs/: Aegis-Submission.docx  README.md  architecture.md  demo-script.md  map-providers.md  pitch-deck.md  submission.md
fraud-graph-ml/: README.md  check_tx.py  pyproject.toml  test_ghost.py
fraud-graph-ml/output/: fraud_graph.json  ghost_ring.json  spectral_data.json  spectral_sonifier.html
fraud-graph-ml/src/aegis_fraud_graph/: api.py  cli.py  config.py  data.py  demo.py  elliptic_bench.py  evaluate.py  export.py  ghost_ring.py  ghost_ring_privacy.py  graph.py  model.py  pipeline.py  rings.py  spectral.py  spectral_audio.py  synth.py
fraud-graph-ml/tests/: test_ghost_ring.py  test_pipeline.py  test_spectral.py
fraud-shield-nlp/: README.md  pyproject.toml
fraud-shield-nlp/src/aegis_fraud_shield/: __init__.py  analyze.py  api.py  config.py  corpus.py  data.py  markers.py  model.py  playbooks.py
fraud-shield-nlp/src/aegis_fraud_shield/ui/: index.html  live-call.html  whatsapp.html
fraud-shield-nlp/src/aegis_fraud_shield/verify/: __init__.py  agent.py  offline.py  tools.py
fraud-shield-nlp/tests/: test_analyze_contract.py  test_multilingual_analyze.py  test_playbooks.py  test_verify_agent.py  test_verify_tools.py  test_whatsapp_webhook.py
shared/: README.md  validate_contract.py
