[project]
name = "aegis-counterfeit-vision"
version = "0.1.0"
description = "Aegis Counterfeit Vision — fake-currency detection (CNN transfer learning + OpenCV security-feature checks)"
authors = [{ name = "Adharshan" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "opencv-python>=4.10",
    "pillow>=10.4",
    "numpy>=1.26",
    "scipy>=1.13",
    "pydantic>=2.9",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "python-multipart>=0.0.9",
    "jsonschema>=4.23",
    # Optional durable serial registry (Atlas). dnspython is declared explicitly
    # because pymongo 4.x dropped the [srv] extra, and mongodb+srv:// connection
    # strings need DNS SRV resolution. Both are unused when MONGODB_URI is unset
    # — the registry falls back to its JSON file.
    "pymongo>=4.9",
    "dnspython>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_counterfeit"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
