[project]
name = "aegis-fraud-shield"
version = "0.1.0"
description = "Aegis Fraud Shield — scam / digital-arrest call & message classifier (TF-IDF + LogReg + marker rules)"
authors = [{ name = "Sudarsan", email = "sudarsan2507@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.9",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "joblib>=1.4",
    "jsonschema>=4.23",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_fraud_shield"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
