[project]
name = "aegis-command-centre"
version = "0.1.0"
description = "Aegis command-centre backend — aggregates Fraud Shield, Counterfeit Vision, and Fraud Graph into one intelligence API"
authors = [{ name = "Prayag", email = "prayagsharma2648@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "jsonschema>=4.23",
    "aegis-fusion",
    "aegis-geospatial",
    "aegis-supply-trail",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[tool.uv.sources]
aegis-fusion = { path = "../fusion", editable = true }
aegis-geospatial = { path = "../geospatial", editable = true }
aegis-supply-trail = { path = "../supply_trail", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_command"]

[tool.pytest.ini_options]
testpaths = ["tests"]
