[project]
name = "aegis-fusion"
version = "0.1.0"
description = "Aegis Gen AI fusion layer — correlates scam, counterfeit, and fraud-ring signals into one intelligence package"
authors = [{ name = "Prayag", email = "prayagsharma2648@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.79",
    "pydantic>=2.9",
    "jsonschema>=4.23",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_fusion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
