[project]
name = "aegis-geospatial"
version = "0.1.0"
description = "Aegis geospatial layer — cross-domain crime hotspot clustering (DBSCAN)"
authors = [{ name = "Prayag", email = "prayagsharma2648@gmail.com" }]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis_geospatial"]

[tool.pytest.ini_options]
testpaths = ["tests"]
